# mma-stats-pipeline

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  install.sh  mma
docs/: SCHEMA_CONTRACT.md
docs/images/: tui-demo.tape
ml/: README.md  archetypes.py  db.py  notebook.ipynb  predict.py  relationships.py  requirements-dev.txt  requirements.txt  run_all.py  serve.py  setup_env.ps1  setup_env.sh
ml/tests/: conftest.py  test_ml.py  test_predict.py  test_serve.py
packaging/homebrew/: README.md
packaging/homebrew/Formula/: mma-stats.rb
packaging/homebrew/tap/: README.md
scraper-go/: README.md  go.mod  go.sum  main.go
scraper-go/internal/fetch/: fetch.go  fetch_test.go
scraper-go/internal/model/: types.go
scraper-go/internal/parse/: events.go  events_test.go  fighters.go  fighters_test.go  fights.go  fights_test.go  helpers.go  helpers_test.go
scraper-go/internal/store/: schema.go  store.go  store_test.go
scripts/: setup.sh  tui_smoke.sh  verify.py
tui-rs/: CONTRACT.md  Cargo.toml  README.md
tui-rs/src/: anim.rs  app.rs  config.rs  db.rs  fuzzy.rs  jobs.rs  main.rs  models.rs  scraper.rs  sidecar.rs  stats_text.rs
tui-rs/src/ui/: database.rs  events.rs  fighters.rs  home.rs  loading.rs  mod.rs  model.rs  predict.rs  scrape.rs
tui-rs/tests/: anim_tests.rs  db_tests.rs  e2e.rs  fuzzy_tests.rs  sidecar_tests.rs  stats_text_tests.rs
tui-rs/tests/fixtures/: README.md  stub_scraper.sh  stub_sidecar.py
viewer/: README.md  app.py  requirements.txt
